[tool.poetry]
name = "python-repository"
version = "1.0.0"
description = "sqlmodel repository pattern implementation"
authors = ["Jonas Scholl <jonas@code-specialist.com>", "Yannic Schröer <yannic@code-specialist.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
database-setup-tools = "^1.0.1"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-x -p no:warnings --cov-report=term-missing --cov-report=term --no-cov-on-fail --cov=python_repository"
